--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="telephone=no" name="format-detection">
     <meta content="email=no" name="format-detection">
     <!--手机页脚end-->
-    <title>华为鸿蒙OS开发者指南开源地址鸿蒙osLiteOS源码【经典收藏】</title>
+    <title>鸿蒙OSHarmonyOS华为操作系统开源LiteOS源码开发者社区鸿蒙OS源码【经典收藏】</title>
     <meta name="description" content="支持国产华为鸿蒙源码开发指南，非官网" />
     <meta name="baidu-site-verification" content="abomsZtyAE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
