--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
         <p>Huawei LiteOS自开源社区发布以来，围绕物联网市场从技术、生态、解决方案、商用支持等多维度使能合作伙伴，构建开源的物联网生态,目前已经聚合了50+ MCU和解决方案合作伙伴，共同推出一批开源开发套件和行业解决方案，帮助众多行业客户快速的推出物联网终端和服务，客户涵盖抄表、停车、路灯、环保、共享单车、物流等众多行业，加速物联网产业发展和行业数字化转型。</p>
     
     <div class="contant_box">
-        <h2>目录列表</h2>
-        <p><strong>华为鸿蒙操作系统微内核官网</strong></p>
+        <h2>目录列表</h2>           
+        <p><strong style="color:#00F">华为鸿蒙操作系统微内核官网</strong></p>
         <p></p>
-        <p>https://www.huawei.com/minisite/liteos/cn/index.html</p>
+        <p><a href="https://www.huawei.com/minisite/liteos/cn/index.html">https://www.huawei.com/minisite/liteos/cn/index.html</a></p>
         <p></p>
         <p><strong style="color:#00F">技术文档</strong></p>
-        <p>https://liteos.github.io</p>
+        <p><a href="https://liteos.github.io">https://liteos.github.io</a></p>
         <p><strong style="color:#00F">github源码下载</strong></p>
-        <p>https://github.com/LiteOS/LiteOS9M）</p>
+        <p><a href="https://github.com/LiteOS/LiteOS9M">https://github.com/LiteOS/LiteOS9M</a></p>
         <p><strong style="color:#00F">华为开发者中心</strong></p>
-        <p>https://developer.huaweicloud.com/iot</p>
+        <p><a href="https://developer.huaweicloud.com/iot">https://developer.huaweicloud.com/iot</a></p>
         <p><strong style="color:#00F">github源码下载</strong></p>
-        <p>https://github.com/LiteOS/LiteOS9M）</p>
+        <p><a href="https://github.com/LiteOS/LiteOS9M">https://github.com/LiteOS/LiteOS9M</a></p>
     </div>
     </div>
     <div class="contant_box">
